salesforce-main/src/main/default/objects/AssignmentUsers__c/AssignmentUsers__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>A collection of users that can be referenced for record assignment and triggers</description>
    <label>AssignmentUsers</label>
</CustomObject>