salesforce-main/src/main/default/objects/AssignmentUsers__c/fields/Admin_Alert_Recipients__c.field-meta.xml
<CustomField>
    <fullName>Admin_Alert_Recipients__c</fullName>
    <description>Id of the public group used for sending admin alerts to the core Salesforce dev/support team</description>
    <inlineHelpText>Public group - &apos;Admin Alert Recipients&apos; (15 digit Id)</inlineHelpText>
    <label>Admin Alert Recipients</label>
    <length>15</length>
    <type>Text</type>
</CustomField>