salesforce-main/src/main/default/objects/AssignmentUsers__c/fields/Default_Admissions_Owner__c.field-meta.xml
<CustomField>
    <fullName>Default_Admissions_Owner__c</fullName>
    <description>Id of Admissions user records will be assigned to. This will trigger the round robin assignment</description>
    <label>Default Admissions Owner</label>
    <length>15</length>
    <type>Text</type>
</CustomField>