salesforce-main/src/main/default/objects/AssignmentUsers__c/fields/Default_BES_Owner__c.field-meta.xml
<CustomField>
    <fullName>Default_BES_Owner__c</fullName>
    <description>Default Business Engagement Specialist owner</description>
    <inlineHelpText>Default Business Engagement Specialist owner user id (15 digit Id)</inlineHelpText>
    <label>Default BES Owner</label>
    <length>15</length>
    <type>Text</type>
</CustomField>