salesforce-main/src/main/default/objects/AssignmentUsers__c/fields/Default_International_Owner__c.field-meta.xml
<CustomField>
    <fullName>Default_International_Owner__c</fullName>
    <description>Id of International user records will be assigned to.</description>
    <label>Default International Owner</label>
    <length>15</length>
    <type>Text</type>
</CustomField>