salesforce-main/src/main/default/objects/AssignmentUsers__c/fields/Default_Lead_Owner__c.field-meta.xml
<CustomField>
    <fullName>Default_Lead_Owner__c</fullName>
    <description>Id of the user leads will be assigned to by default (QC Team). This will trigger the round robin assignment</description>
    <inlineHelpText>Default lead owner user id (15 digit Id)</inlineHelpText>
    <label>Default Lead Owner</label>
    <length>15</length>
    <type>Text</type>
</CustomField>