salesforce-main/src/main/default/objects/AssignmentUsers__c/fields/Default_Support_User__c.field-meta.xml
<CustomField>
    <fullName>Default_Support_User__c</fullName>
    <description>Id of the user assigned as the support user for cases, namely the Automated Case User and Default Case Owner.</description>
    <inlineHelpText>Default support user for case processes (15 digit Id)</inlineHelpText>
    <label>Default Support User</label>
    <length>15</length>
    <type>Text</type>
</CustomField>